<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/history"
      android:icon="@drawable/ic_history"
      android:title="@string/booking_history" />
    <item
      android:id="@+id/inbox"
      android:icon="@drawable/ic_chat"
      android:title="@string/inbox" />
    <item
      android:id="@+id/notification"
      android:icon="@drawable/ic_notifications"
      android:title="@string/notification" />
    <item
      android:id="@+id/certificate"
      android:icon="@drawable/ic_certificates"
      android:title="@string/certification" />
    <item
      android:id="@+id/calender"
      android:icon="@drawable/ic_dates"
      android:title="@string/event_calender" />
    <item
      android:id="@+id/otherapp"
      android:icon="@drawable/ic_exit"
      android:title="@string/event_manager_app" />

  </group>

  <item android:title="@string/about">
    <menu>
      <item
        android:id="@+id/about"
        android:icon="@drawable/ic_about"
        android:title="@string/about_us" />
      <item
        android:id="@+id/feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/send_us_feedback" />
      <item
        android:id="@+id/tc"
        android:icon="@drawable/ic_terms"
        android:title="@string/terms_and_conditions" />

      <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help"
        android:title="@string/help" />
      <item
        android:id="@+id/lo"
        android:icon="@drawable/ic_power"
        android:title="@string/logout" />
    </menu>
  </item>

</menu>
