<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:padding="5dp"
  android:background="@color/gray">
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tvEventName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/size_18sp"
    android:textStyle="bold"
    android:textColor="@color/black"
    app:fontFamily="serif"
    android:text="@string/app_name" />
  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tvEStartDate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/date_time"/>
    <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_phone_in_talk_black_24dp"
        android:layout_margin="1dp"/>
      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEventContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/simple_contact_no"
        android:layout_gravity="center"/>
      <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"/>
      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_mail_black_24dp"
        android:layout_margin="1dp"/>
      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEventEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/simple_email"
        android:layout_gravity="center"/>
    </TableRow>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingTop="3dp"
      android:paddingBottom="3dp"
      android:minHeight="100dp">
      <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"/>
      <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEventAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:lines="4"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="16sp"
      android:text="@string/description"/>
    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tvEventDesc"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:lines="5"
      android:text="@string/event_description"/>
  </LinearLayout>
  </ScrollView>
  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btEventBook"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg_button_accent_fill"
    android:textSize="@dimen/size_18sp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:text="book Event"/>
</androidx.appcompat.widget.LinearLayoutCompat>