<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/transparent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context=".ui.activities.EditProfileActivity"
  tools:showIn="@layout/activity_edit_profile">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      app:cardElevation="3dp">
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:padding="5dp">
        <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/personal_info"
          android:textSize="@dimen/size_18sp"
          android:textStyle="bold"/>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/etRegId"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/register_id"/>
          </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/etName"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/name"/>
          </com.google.android.material.textfield.TextInputLayout>

        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/etEmailId"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/email"/>
          </com.google.android.material.textfield.TextInputLayout>

        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/etContact"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/contact_no"/>
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/etCourse"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/course"/>
          </com.google.android.material.textfield.TextInputLayout>

        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/etDoB"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/dob"/>
          </com.google.android.material.textfield.TextInputLayout>
          <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/etGender"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/gender"/>
          </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
        <TableRow
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/etInterest"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/interest"/>
          </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

      </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/bg_button_fill"
      android:textColor="@color/primaryTextColor"
      android:layout_marginTop="20dp"
      android:textStyle="bold"
      android:textSize="@dimen/size_18sp"
      android:onClick="updateStudent"
      android:text="@string/submit"/>
  </LinearLayout>
</androidx.core.widget.NestedScrollView>