<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
    android:background="#161616"
    android:padding="24dp"
  android:layout_width="match_parent"
  android:layout_height="match_parent">


  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:minWidth="130dp"
      android:minHeight="120dp"
      android:background="@drawable/bg_button_outline"
      android:padding="2dp"
      android:orientation="vertical">

      <TextView
        android:id="@+id/tvEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp" />
      <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_access_alarms_black_24dp"
          android:layout_margin="2dp"
          android:layout_gravity="center"/>
        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvEventTime"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/date_time"/>
      </TableRow>
      <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_place_black_24dp"
          android:layout_margin="2dp"
          android:layout_gravity="center"/>
        <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tvEventLocation"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/date_time"/>
      </TableRow>
      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEventView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/size_35dp"
        android:layout_gravity="end"
        android:layout_margin="3dp"
        android:background="@color/transparent"
        android:elevation="0dp"
        android:textColor="@color/colorAccent"
        android:text="@string/view"/>
    </LinearLayout>

  </androidx.cardview.widget.CardView>




</LinearLayout>